[gd_scene load_steps=9 format=3 uid="uid://be24omkufdto6"]

[ext_resource type="Script" uid="uid://cgy1ya7ras2uv" path="res://Cards/arena_card_details.gd" id="1_6jj6o"]
[ext_resource type="Texture2D" uid="uid://ccsxe205y8lva" path="res://Images/Dirt.jpg" id="1_d0of6"]
[ext_resource type="Texture2D" uid="uid://dp1ew5edt28ly" path="res://UI/Terrains/stone.png" id="2_1oedn"]
[ext_resource type="LabelSettings" uid="uid://bh5cergsoq62" path="res://Cards/TERRAINLABEL.tres" id="2_lmswf"]
[ext_resource type="LabelSettings" uid="uid://stquwu1hrb45" path="res://ATK_DEFLABELARENAZOOM.tres" id="3_ky1ik"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jj6o"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 4
shadow_offset = Vector2(-1.075, 2.7)

[sub_resource type="SystemFont" id="SystemFont_ky1ik"]
font_names = PackedStringArray("Tahoma")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_1oedn"]
font = SubResource("SystemFont_ky1ik")
font_size = 10
font_color = Color(1, 1, 0.317647, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.623529)

[node name="ArenaCardDetails" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_6jj6o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(361, 11)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_6jj6o")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TerrainLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Stone"
label_settings = ExtResource("2_lmswf")

[node name="Terrain" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_1oedn")
expand_mode = 3
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Art" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
texture = ExtResource("1_d0of6")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Name"
label_settings = ExtResource("3_ky1ik")

[node name="Rarity" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Rarity"
label_settings = ExtResource("3_ky1ik")

[node name="Cost" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Cost"
label_settings = ExtResource("3_ky1ik")

[node name="_______________" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Abilities" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Abilities"
label_settings = ExtResource("3_ky1ik")

[node name="AbilitiesName" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Abilities Name"
label_settings = SubResource("LabelSettings_1oedn")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8

[node name="AtkLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "ATK"
label_settings = ExtResource("3_ky1ik")
horizontal_alignment = 2

[node name="Atk" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "10"
label_settings = ExtResource("3_ky1ik")
horizontal_alignment = 2

[node name="DefLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "DEF"
label_settings = ExtResource("3_ky1ik")
horizontal_alignment = 2

[node name="Def" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "10"
label_settings = ExtResource("3_ky1ik")
horizontal_alignment = 2
